--- a/src/AppBundle/Resources/views/Profile/edit.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit.html.twig
@@ -11,7 +11,7 @@
 
         <div class="col-lg-12">
             {% for flashMessage in app.session.flashbag.get('success') %}
-                <div class="alert alert-success alert-dismissable">
+                <div class="alert alert-success alert-dismissable alert-temporary">
                     {{ flashMessage }}
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                 </div>
@@ -74,7 +74,7 @@
                     {{ 'profile.edit.picture.title'|trans }}
                 </div>
                 <div class="panel-body text-center">
-                    {% include 'AppBundle:Components:profile_picture.html.twig' with {'webPath' : user.userProfile.picture.webPath} %}
+                    {% include 'AppBundle:Components:profile_picture.html.twig' with {'picture' : user.userProfile.picture} %}
                     {{ form_start(form_picture) }}
                     <div class="form-group text-center">
                         <div class="has-error">
