--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -9,7 +9,7 @@
 
         <div class="col-lg-12">
             {% for flashMessage in app.session.flashbag.get('success') %}
-                <div class="alert alert-success alert-dismissable">
+                <div class="alert alert-success alert-dismissable alert-temporary">
                     {{ flashMessage|raw }}
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                 </div>
