Fix deprecated _self

--- a/src/AppBundle/Resources/views/Profile/show.html.twig
+++ b/src/AppBundle/Resources/views/Profile/show.html.twig
@@ -19,17 +19,17 @@
                 </div>
                 <div class="panel-body">
                     <div class="list-group">
-                        {{ _self.list_group_item('profile.show.user_profile.fields.first_year_contact'|trans, user.userProfile.firstYearContact) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.address'|trans, user.userProfile.address) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.additional_address_details'|trans, user.userProfile.additionalAddressDetails) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.zip_code'|trans, user.userProfile.zipCode) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.city'|trans, user.userProfile.city) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.facebook_profile'|trans, user.userProfile.facebookProfile) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.twitter_profile'|trans, user.userProfile.twitterProfile) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.linked_in_profile'|trans, user.userProfile.linkedInProfile) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.personal_website'|trans, user.userProfile.personalWebsite) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.phone_number'|trans, user.userProfile.phoneNumber) }}
-                        {{ _self.list_group_item('profile.show.user_profile.fields.cellphone_number'|trans, user.userProfile.cellphoneNumber) }}
+                        {{ list_group_item('profile.show.user_profile.fields.first_year_contact'|trans, user.userProfile.firstYearContact) }}
+                        {{ list_group_item('profile.show.user_profile.fields.address'|trans, user.userProfile.address) }}
+                        {{ list_group_item('profile.show.user_profile.fields.additional_address_details'|trans, user.userProfile.additionalAddressDetails) }}
+                        {{ list_group_item('profile.show.user_profile.fields.zip_code'|trans, user.userProfile.zipCode) }}
+                        {{ list_group_item('profile.show.user_profile.fields.city'|trans, user.userProfile.city) }}
+                        {{ list_group_item('profile.show.user_profile.fields.facebook_profile'|trans, user.userProfile.facebookProfile) }}
+                        {{ list_group_item('profile.show.user_profile.fields.twitter_profile'|trans, user.userProfile.twitterProfile) }}
+                        {{ list_group_item('profile.show.user_profile.fields.linked_in_profile'|trans, user.userProfile.linkedInProfile) }}
+                        {{ list_group_item('profile.show.user_profile.fields.personal_website'|trans, user.userProfile.personalWebsite) }}
+                        {{ list_group_item('profile.show.user_profile.fields.phone_number'|trans, user.userProfile.phoneNumber) }}
+                        {{ list_group_item('profile.show.user_profile.fields.cellphone_number'|trans, user.userProfile.cellphoneNumber) }}
                     </div>
                 </div>
             </div>
