--- a/src/AppBundle/Resources/views/Profile/show.html.twig
+++ b/src/AppBundle/Resources/views/Profile/show.html.twig
@@ -50,9 +50,9 @@
                     </div>
                 </div>
             </div>
+        <!-- /.col-lg-6 -->
         {% endif %}
 
-        <!-- /.col-lg-6 -->
         <div class="col-lg-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -60,6 +60,37 @@
                 </div>
                 <div class="panel-body text-center">
                     {% include 'AppBundle:Components:profile_picture.html.twig' with {'picture' : user.userProfile.picture} %}
+                </div>
+            </div>
+        </div>
+        <!-- /.col-lg-6 -->
+
+        <div class="col-lg-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    {{ 'profile.edit.status.title'|trans }}
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table">
+                            <tbody>
+                            <tr>
+                                <td>{{ 'profile.edit.status.keys.profile_type'|trans }}</td>
+                                <td>{{ ('user.profile_type.'~user.profileType|lower)|trans }}</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'profile.edit.status.keys.is_validated'|trans }}</td>
+                                <td>{{ user.validated ? 'yes'|trans:'no'|trans }}</td>
+                            </tr>
+                            {% if user.offshootOfOrigin is not null %}
+                                <tr>
+                                    <td>{{ 'profile.edit.status.keys.offshoot_of_origin'|trans }}</td>
+                                    <td><a href="{{ path('cheerup_group_show', {'id': user.offshootOfOrigin.id}) }}">{{ user.offshootOfOrigin.name }}</a></td>
+                                </tr>
+                            {% endif %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
