--- a/src/AppBundle/Resources/views/Group/show.html.twig
+++ b/src/AppBundle/Resources/views/Group/show.html.twig
@@ -9,7 +9,7 @@
     <div class="col-lg-12">
       <div class="panel panel-default">
         <div class="panel-heading">
-          {{ ('group.header.helper.' ~ group.groupType)|trans }}
+          {{ ('group.type.' ~ group.groupType|lower)|trans }}
         </div>
         <div class="panel-body">
           <p>
